# ros2_code_generator

./: README.md  generate.py
rclcpp-executor-template/: CMakeLists.txt  package.xml
rclcpp-executor-template/config/: template.yaml
rclcpp-executor-template/include/template/: register.hpp  template.hpp  template_handle.hpp
rclcpp-executor-template/launch/: template.launch  template.launch.py
rclcpp-executor-template/src/: main.cpp  template.cpp  template_handle.cpp
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: Detect.msg  MultiDetect.msg  Nav.msg  NavStatus.msg  ScsSignal.msg
