<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_msgs</name>
  <version>2.0.0</version>
  <description>
    The robot_msgs package provides all the messages for RoboMaster AI Robot driver
  </description>
  <author>YuChen</author>
  <maintainer email="func@qq.com">RoboMaster</maintainer>
  <license>GPL 3.0</license>
  <url type="repository">https://github.com/RoboMaster/RoboRTS-Base</url>
  <url type="bugtracker">https://github.com/RoboMaster/RoboRTS-Base/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>